[workspace]
resolver = "2"
members = ["cdn-proto", "cdn-broker", "cdn-marshal", "cdn-client", "tests"]

package.description = "The PushCDN is a distributed, scalable, and fault-tolerant pub/sub messaging system"

[workspace.dependencies]
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "parking_lot",
] }
jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.4.2", default-features = false, features = [
    "std",
] }
rand = "0.8"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "json",
    "ansi",
] }
clap = { version = "4", features = ["derive"] }
prometheus = { version = "0.13", default-features = false }
lazy_static = "1"
async-std = { version = "1", default-features = false, features = [
    "tokio1",
    "attributes",
] }
rkyv = { version = "0.7", features = ["validation"] }
derivative = "2"
parking_lot = "0.12"
rcgen = { version = "0.12", features = ["x509-parser", "pem"] }

# Dev dependencies (can't be defined explicitly in the workspace)
# TODO: figure out if this actually builds on non-test targets
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
