[workspace]
resolver = "2"
members = ["cdn-proto", "cdn-broker", "cdn-marshal", "cdn-client", "tests"]

package.description = "The PushCDN is a distributed, scalable, and fault-tolerant pub/sub messaging system"

[workspace.dependencies]
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "parking_lot",
    "tracing"
] }
jf-signature = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.4.5", default-features = false, features = [
    "std", "bls"
] }
rand = "0.8"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "env-filter",
    "json",
    "ansi",
] }
clap = { version = "4", features = ["derive"] }
prometheus = { version = "0.13", default-features = false }
lazy_static = "1"
async-std = { version = "1", default-features = false, features = [
    "tokio1",
    "attributes",
] }
rkyv = { version = "0.7", features = ["validation"] }
derivative = "2"
rcgen = { version = "0.13", features = ["x509-parser", "crypto"] }

# Dev dependencies (can't be defined explicitly in the workspace)
# TODO: figure out if this actually builds on non-test targets
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
