[package]
name = "broker"
version = "0.1.0"
edition = "2021"

description = "Defines the broker server, which is responsible for routing messages from clients"

[features]
local_discovery = ["proto/local_discovery"]
insecure = ["proto/insecure"]
default = ["local_discovery", "insecure"]

[dependencies]
jf-primitives.workspace = true
proto = { path = "../proto", default-features = false, features = ["metrics"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
local-ip-address = "0.5.7"
slotmap = "1.0.7"
delegate = "0.12.0"
async-trait.workspace = true
paste = "1.0.14"
prometheus = { workspace = true }
lazy_static = { workspace = true }
