[package]
name = "broker"
version = "0.1.0"
edition = "2021"

description = "Defines the broker server, which is responsible for routing messages from clients"

[features]
default = ["local_discovery", "insecure", "runtime-tokio"]

local_discovery = ["proto/local_discovery"]
insecure = ["proto/insecure"]

runtime-tokio = ["proto/runtime-tokio"]
runtime-async-std = ["dep:async-std", "proto/runtime-async-std"]

[dependencies]
jf-primitives.workspace = true
proto = { path = "../proto", default-features = false, features = ["metrics"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-std = { workspace = true, optional = true }
clap.workspace = true
local-ip-address = "0.5.7"
slotmap = "1.0.7"
delegate = "0.12.0"
async-trait.workspace = true
paste = "1.0.14"
prometheus = { workspace = true }
lazy_static = { workspace = true }
derive_builder.workspace = true