[package]
name = "broker"
version = "0.1.0"
edition = "2021"

description = "Defines the broker server, which is responsible for routing messages from clients"

[features]
default = ["insecure", "runtime-tokio", "strong_consistency"]

strong_consistency = []
local_discovery = ["proto/local_discovery"]
insecure = ["proto/insecure"]

runtime-tokio = ["proto/runtime-tokio"]
runtime-async-std = ["dep:async-std", "proto/runtime-async-std"]

[dev-dependencies]
criterion.workspace = true
pprof.workspace = true

# Benchmark direct messages (non-networked)
[[bench]]
name = "direct"
harness = false

# Benchmark broadcast messages (non-networked)
[[bench]]
name = "broadcast"
harness = false

[dependencies]
jf-primitives.workspace = true
proto = { path = "../proto", default-features = false, features = ["metrics"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-std = { workspace = true, optional = true }
clap.workspace = true
local-ip-address = "0.5.7"
delegate = "0.12.0"
paste = "1.0.14"
prometheus = { workspace = true }
lazy_static = { workspace = true }
derive_builder.workspace = true
rkyv.workspace = true
derivative.workspace = true
dashmap = "5.5.3"
parking_lot = "0.12.1"

