[package]
name = "cdn-broker"
version = "0.1.0"
edition = "2021"

description = "Defines the broker server, which is responsible for routing messages from clients"

[features]
default = ["insecure", "runtime-tokio", "strong_consistency"]

strong_consistency = []
insecure = ["cdn-proto/insecure"]

runtime-tokio = ["cdn-proto/runtime-tokio"]
runtime-async-std = ["dep:async-std", "cdn-proto/runtime-async-std"]

[dev-dependencies]
criterion.workspace = true
pprof.workspace = true

# Benchmark direct messages (non-networked)
[[bench]]
name = "direct"
harness = false

# Benchmark broadcast messages (non-networked)
[[bench]]
name = "broadcast"
harness = false

[dependencies]
jf-primitives.workspace = true
cdn-proto = { path = "../cdn-proto", default-features = false, features = ["metrics"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-std = { workspace = true, optional = true }
clap.workspace = true
local-ip-address = "0.5.7"
prometheus = { workspace = true }
lazy_static = { workspace = true }
derive_builder.workspace = true
rkyv.workspace = true
derivative.workspace = true
dashmap = "5.5.3"
parking_lot.workspace = true