[package]
name = "cdn-broker"
version = "0.1.0"
edition = "2021"

description = "Defines the broker server, which is responsible for routing messages from clients"

[features]
default = ["runtime-tokio", "strong_consistency"]

strong_consistency = []

runtime-tokio = []
runtime-async-std = ["dep:async-std"]

[dev-dependencies]
criterion.workspace = true
pprof.workspace = true

# Benchmark direct messages (non-networked)
[[bench]]
name = "direct"
harness = false

# Benchmark broadcast messages (non-networked)
[[bench]]
name = "broadcast"
harness = false

[dependencies]
jf-primitives.workspace = true
cdn-proto = { path = "../cdn-proto", default-features = false, features = [
    "metrics",
] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-std = { workspace = true, optional = true }
clap.workspace = true
prometheus = { workspace = true }
lazy_static = { workspace = true }
derive_builder.workspace = true
rkyv.workspace = true
derivative.workspace = true
dashmap = { version = "5", default-features = false }
parking_lot.workspace = true
rand.workspace = true
local-ip-address = "0.6"
