[package]
name = "cdn-broker"
version = "0.1.0"
edition = "2021"

description = "Defines the broker server, which is responsible for routing messages from clients"

[features]
default = ["strong-consistency"]

strong-consistency = []
global-permits = ["cdn-proto/global-permits"]

runtime-async-std = ["dep:async-std"]

[dev-dependencies]
criterion.workspace = true
pprof.workspace = true

# Benchmark direct messages (non-networked)
[[bench]]
name = "direct"
harness = false

# Benchmark broadcast messages (non-networked)
[[bench]]
name = "broadcast"
harness = false

# The main broker binary
[[bin]]
name = "broker"
path = "src/binaries/broker.rs"

# The "bad" broker is a binary that tries to spam an actual broker with connections
[[bin]]
name = "bad-broker"
path = "src/binaries/bad-broker.rs"

# This dependency is used for the Tokio console
[target.'cfg(tokio_unstable)'.dependencies]
console-subscriber = "0.3"


[dependencies]
jf-signature.workspace = true
cdn-proto = { path = "../cdn-proto", default-features = false, features = [
    "metrics",
] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-std = { workspace = true, optional = true }
clap.workspace = true
prometheus = { workspace = true }
lazy_static = { workspace = true }
rkyv.workspace = true
derivative.workspace = true
dashmap = { version = "5", default-features = false }
rand.workspace = true
local-ip-address = "0.6"
parking_lot = "0.12"
portpicker = "0.1"
