[package]
name = "cdn-client"
version = "0.1.0"
edition = "2021"

description = "Defines client interactions for both marshals and brokers"

[features]
runtime-async-std = ["dep:async-std"]

# Bad connector attempts to continuously authenticate with a broker
[[bin]]
name = "bad-connector"
path = "src/test-binaries/bad-connector.rs"

# Bad sender attempts to continuously send messages to a broker
[[bin]]
name = "bad-sender"
path = "src/test-binaries/bad-sender.rs"

[dependencies]
tokio = { workspace = true }
async-std = { workspace = true, optional = true }
jf-primitives.workspace = true
cdn-proto = { path = "../cdn-proto", default-features = false }
tracing-subscriber.workspace = true
rand.workspace = true
tracing.workspace = true
clap.workspace = true
