[package]
name = "cdn-marshal"
version = "0.1.0"
edition = "2021"

description = "Contains the server implementation for the marshal, which issues permits and manages connections to brokers"

[features]
global-permits = ["cdn-proto/global-permits"]

runtime-async-std = ["dep:async-std"]

[dependencies]
jf-primitives.workspace = true
cdn-proto = { path = "../cdn-proto", default-features = false, features = [
    "metrics",
] }
async-std = { workspace = true, optional = true }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
derive_builder.workspace = true
