[package]
name = "cdn-proto"
version = "0.1.0"
edition = "2021"
description = "Contains the common protocol definition and common code for the broker, client, and marshal"

[build-dependencies]
rcgen.workspace = true

[features]
default = ["runtime-tokio"]

metrics = ["dep:prometheus"]

runtime-tokio = ["sqlx/runtime-tokio"]
runtime-async-std = ["dep:async-std", "sqlx/runtime-async-std"]

[dev-dependencies]
portpicker = "0.1.1"
criterion.workspace = true
pprof.workspace = true

# Network protocol (tcp/quic) benchmarks
[[bench]]
name = "protocols"
harness = false


[dependencies]
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }

sqlx = { version = "0.7.3", default-features = false, features = [
    "sqlite",
    "macros",
    "migrate",
    "time",
] }

prometheus = { workspace = true, optional = true }
lazy_static = { workspace = true }

tokio = { workspace = true }
async-std = { version = "1.12.0", features = [
    "tokio1",
    "attributes",
], optional = true }

capnp = "0.19"
thiserror = "1"
quinn = "0.10"
jf-primitives.workspace = true
ark-serialize = "0.4"
rand.workspace = true
url = "2"
tracing.workspace = true
pem = "3"
rustls = "0.21"
mockall = "0.12"
async-trait = "0.1"
warp = "0.3"
anyhow = "1"
kanal = "0.1.0-pre8"
rkyv.workspace = true
mnemonic = "1"
rcgen.workspace = true
derivative.workspace = true
parking_lot.workspace = true
