[package]
name = "cdn-proto"
version = "0.1.0"
edition = "2021"
description = "Contains the common protocol definition and common code for the broker, client, and marshal"

[build-dependencies]
rcgen.workspace = true
capnpc = "0.19"

[features]
metrics = ["dep:prometheus"]
# Allow permits to be issued for _any_ broker
global-permits = []

[dev-dependencies]
portpicker = "0.1.1"
criterion.workspace = true
pprof.workspace = true

# Network protocol (tcp/quic) benchmarks
[[bench]]
name = "protocols"
harness = false


[dependencies]
redis = { version = "0.24.0", default-features = false, features = [
    "connection-manager",
    "tokio-comp",
] }

sqlx = { version = "0.7.3", default-features = false, features = [
    "sqlite",
    "macros",
    "migrate",
    "time",
    "runtime-tokio",
] }

prometheus = { workspace = true, optional = true }
lazy_static = { workspace = true }

tokio = { workspace = true }

capnp = "0.19"
thiserror = "1"
quinn = { version = "0.10", default-features = false, features = [
    "tls-rustls",
    "runtime-tokio",
] }
jf-primitives.workspace = true
ark-serialize = "0.4"
rand.workspace = true
url = "2"
tracing.workspace = true
pem = "3"
rustls = { version = "0.21", default-features = false }
async-trait = "0.1"
warp = { version = "0.3", default-features = false }
anyhow = "1"
kanal = "0.1.0-pre8"
rkyv.workspace = true
mnemonic = "1"
rcgen.workspace = true
derivative.workspace = true
