[package]
name = "client"
version = "0.1.0"
edition = "2021"

description = "Defines client interactions for both marshals and brokers"

[dependencies]
jf-primitives.workspace = true
proto.path = "../proto"
ark-serialize.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true