[package]
name = "client"
version = "0.1.0"
edition = "2021"

description = "Defines client interactions for both marshals and brokers"

[features]
local_discovery = ["proto/local_discovery"]
insecure = ["proto/insecure"]
default = ["local_discovery", "insecure"]

[dependencies]
jf-primitives.workspace = true
proto = { path = "../proto", default-features = false }
tokio.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
tracing.workspace = true
clap.workspace = true