[package]
name = "proto"
version = "0.1.0"
edition = "2021"
description = "Contains the common protocol definition and common code for the broker, client, and marshal"

[build-dependencies]
capnpc = "0.19.0"

[features]
local-testing = ["rustls/dangerous_configuration"]
default = ["local-testing"]

[dependencies]
capnp = "0.19.1"
thiserror = "1.0.56"
quinn = "0.10.2"
tokio.workspace = true
jf-primitives.workspace = true
ark-serialize.workspace = true
rand.workspace = true
parking_lot = "0.12.1"
url = "2.5.0"
tracing.workspace = true
async-trait = "0.1.77"
rustls = "0.21.10"
rcgen = "0.12.0"
pem = "3.0.3"
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }