[package]
name = "tests"
version = "0.6.1"
edition = "2021"
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
cdn-client.path = "../cdn-client"
cdn-broker.path = "../cdn-broker"
cdn-proto.path = "../cdn-proto"
cdn-marshal.path = "../cdn-marshal"
rand.workspace = true
jf-signature.workspace = true